
buildscript {
println "gradle version: " + gradle.gradleVersion
println "JVM: " + System.getProperty("java.home") + " arch: " + System.getProperty("os.arch")
// Display information about the JVM used for the build

repositories {
  mavenLocal()
  repositories {
      maven { url "https://plugins.gradle.org/m2/" }
  }
  maven {
    url 'https://pkgs.dev.azure.com/iwaowatanabe/kt-learning/_packaging/OldVM/maven/v1'
    // see: https://dev.azure.com/iwaowatanabe/kt-learning/_artifacts/feed/OldVM
  }
  mavenCentral()
}
dependencies {
  classpath 'org.gretty:gretty:2.3.1'
  if (java.lang.Integer.getInteger("java.specification.version") < 1.8) {
    classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
    classpath 'ca.coglinc:javacc-gradle-plugin:2.4.0'
  }
  else if (gradle.gradleVersion < '7.0') {
    classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
  }
  else {
    classpath 'com.github.johnrengelman.shadow:com.github.johnrengelman.shadow.gradle.plugin:7.1.2'
  }
}}

plugins {
  // id 'com.github.johnrengelman.shadow' version '5.2.4'
  // id("org.gretty") version "2.3.1"
  id 'maven-publish'
  // id 'org.javacc.javacc' version '4.0.3'
}

def sourceEncoding = 'utf-8'
def documentEncoding = 'utf-8'
def env = System.env
def gver = gradle.gradleVersion
def sp = System.properties
def osname = sp['os.name'].toLowerCase()
def osarch = sp['os.arch']
def userHome = sp['user.home']
def gverinfo = "Gradle ${gradle.gradleVersion} (${sp['os.name']}:${sp['os.arch']}:${sp['os.version']})"

allprojects {
apply plugin: 'java'
// sourceSets.main.java.srcDirs = ['src']
// sourceSets.main.resources.srcDirs = ['resources']
// sourceSets.test.java.srcDirs = ['test']
if (gver < '5.0') {
  sourceSets.main.output.classesDir = 'build/classes'
  sourceSets.main.output.resourcesDir = 'build/resources'
  sourceSets.test.output.classesDir = 'build/test-classes'
  sourceSets.test.output.resourcesDir = 'build/test-resources'
}
repositories {
  mavenLocal()
  maven {
    url 'https://pkgs.dev.azure.com/iwaowatanabe/kt-learning/_packaging/OldVM/maven/v1'
    // see: https://dev.azure.com/iwaowatanabe/kt-learning/_artifacts/feed/OldVM
  }
  maven { url 'https://repository.jboss.org/maven2'  }
  mavenCentral()
}
tasks.withType(JavaCompile) {
  // options.compilerArgs << '-Xlint:unchecked,divzero'
  options.deprecation = false
  options.encoding = sourceEncoding
  doFirst {
    def bootClassPath = ''
    if (sourceCompatibility == '1.8' && env.JRE8_HOME != null)
        bootClassPath ="${env.JRE8_HOME}/lib/rt.jar"
    else if (sourceCompatibility == '1.7' && env.JRE7_HOME != null)
        bootClassPath = "${env.JRE7_HOME}/lib/rt.jar"
    else if (sourceCompatibility == '1.6' && env.JRE6_HOME != null)
        bootClassPath = "${env.JRE6_HOME}/lib/rt.jar"
    else if (sourceCompatibility == '1.5' && env.JRE5_HOME != null)
        bootClassPath = "${env.JRE5_HOME}/lib/rt.jar"
    else if (sourceCompatibility == '1.4' && env.JRE4_HOME != null)
        bootClassPath = "${env.JRE4_HOME}/lib/rt.jar"
    else if (sourceCompatibility == '1.3' && env.JRE3_HOME != null)
        bootClassPath = "${env.JRE3_HOME}/lib/rt.jar"

    if (bootClassPath != '') {
        println "INFO: bootstrapClasspath: ${bootClassPath}"
        options.fork = true
        if (gver < '5.0')
          options.bootClasspath = "${bootClassPath}"
      // ↑ for gradle 4.x with JDK7
        else
          options.bootstrapClasspath = files("${bootClassPath}")
      // ↑ for gradle 5.x with JDK8 or later
    }
  }
}
javadoc {
  source = sourceSets.main.allJava
  classpath = sourceSets.main.compileClasspath
  options.charSet = documentEncoding
  options.encoding = sourceEncoding
  if (env.DEBUG != null) options.memberLevel = JavadocMemberLevel.PACKAGE
  options.addStringOption('Xdoclint:none', '-quiet')
  doLast {
    println "INFO: open ${project.docsDir}/javadoc/index.html"
  }
}

task zipdoc(type: Zip, dependsOn: javadoc) {
  description 'Zip the javadoc archive'
  if (gver < '7.0') {
    destinationDir = file('../apidocs')
    classifier = "apidoc-" + new Date().format('yyyy-MMdd')
    extension = 'zip'
  }
  else {
    destinationDirectory = file('../apidocs')
    archiveClassifier = "apidoc-" + new Date().format('yyyy-MMdd')
    archiveExtension = 'zip'
  }
  from "${project.docsDir}/javadoc"
  excludes = ['build', '.*']
  doLast {
    println "INFO: created: ${archivePath}"
  }
}

task copylib(type: Copy) {
  description 'Collect dependent libraries and store them in the lib folder'
  if (gver <'7.0') {
    // from (configurations.compile + configurations.testCompile)
    // from configurations.compile
    from configurations.runtimeClasspath
  }
  else {
    from configurations.runtimeClasspath
  }
  into "lib"
}}

subprojects {
// sourceCompatibility = 1.6

task localDeploy {
dependsOn "jar"
def LIBS_DEPLOY_PATH="${rootDir}/libs"
doFirst {
  println "from :build/libs/${project.jar.archiveName} To: ${LIBS_DEPLOY_PATH}"
}
doLast {
  copy {
    from "build/libs/${project.jar.archiveName}"
    into "${LIBS_DEPLOY_PATH}"
  }
}}

task hotDeploy {
dependsOn "ear"
doFirst {
  println "from :build/libs/${project.ear.archiveName} To: ${env.DEPLOY_PATH}"
}
doLast {
  copy {
    from "build/libs/${project.ear.archiveName}"
    into "${env.DEPLOY_PATH}"
  }
}}}


project(':FrameWorkMinimized') {
description 'first project'
sourceCompatibility = '1.8'
dependencies {
  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.25.3'
  implementation 'commons-io:commons-io:2.21.0'
  implementation 'org.apache.logging.log4j:log4j-core:2.25.3'
  testImplementation 'org.junit.jupiter:junit-jupiter:5.14.2' // for JRE8 or later
  testImplementation 'org.assertj:assertj-core:3.27.6'
  testImplementation 'org.mockito:mockito-all:2.0.2-beta'
  testImplementation 'com.google.jimfs:jimfs:1.3.1'
}}

project(':msgparser') {
description 'Outlook MSG file parser library'
sourceCompatibility = '1.8'
dependencies {
  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.25.3'
  compile 'commons-io:commons-io:2.21.0'
  compile 'commons-validator:commons-validator:1.10.1'
  // compile 'org.apache.commons:commons-lang3:3.20.0'
  compile 'org.apache.commons:commons-lang3:3.18.0'
  compile 'org.apache.poi:poi-scratchpad:5.5.1'
  testImplementation 'org.junit.jupiter:junit-jupiter:5.14.2' // for JRE8 or later
}
publishing {
  publications {
    mavenJava(MavenPublication) {
      from components.java
      groupId = 'com.auxilii'
      artifactId = archivesBaseName
      version = '1.0.0'
    }
  }
  repositories {
    maven {
      name = "localRepo"
      url = uri("${userHome}/.m2/repository")
      // url = uri("${buildDir}/repo")
      // You can change this to a local or remote Maven repository URL.
    }
  }
}}


project(':MSGViewer') {
apply plugin: 'application'
// apply plugin: 'org.javacc.javacc'
apply plugin: 'ca.coglinc.javacc'
apply plugin: 'com.github.johnrengelman.shadow'

description 'first project'
mainClassName = 'net.sourceforge.MSGViewer.ModuleLauncher'
version = '1.9.0-SNAPSHOT'
sourceCompatibility = '1.8'
dependencies {
  implementation project(':FrameWorkMinimized')
  implementation project(':msgparser')
  implementation 'net.htmlparser.jericho:jericho-html:3.4'
  implementation 'jakarta.mail:jakarta.mail-api:2.1.5'
  runtimeOnly 'org.eclipse.angus:angus-mail:2.0.5'

  // implementation 'commons-io:commons-io:2.21.0'
  // implementation 'commons-validator:commons-validator:1.10.1'
  // implementation 'org.apache.commons:commons-lang3:3.18.0'
  // implementation 'org.apache.poi:poi-scratchpad:5.5.1'
  testImplementation 'org.junit.jupiter:junit-jupiter:5.14.2' // for JRE8 or later
  testImplementation 'org.assertj:assertj-core:3.27.6'
  testImplementation 'org.mockito:mockito-all:2.0.2-beta'
  testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
  testImplementation 'com.google.jimfs:jimfs:1.3.1'
}
jar {
  manifest {
    attributes 'Main-Class': mainClassName
  }
}}

